# ChangeLog for www-apps/viewvc
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-apps/viewvc/ChangeLog,v 1.90 2013/05/25 18:32:58 idl0r Exp $

*viewvc-1.1.20 (25 May 2013)

  25 May 2013; Christian Ruppert <idl0r@gentoo.org> +viewvc-1.1.20.ebuild:
  Non-Maintainer bump.

  25 Dec 2012; Pacho Ramos <pacho@gentoo.org> -viewvc-1.1.13.ebuild,
  metadata.xml, viewvc-1.1.17.ebuild:
  Drop mod_python support due its treecleaning (#343663), drop old.

  13 Nov 2012; Andreas Schuerch <nativemad@gentoo.org> viewvc-1.1.17.ebuild:
  x86 stable, see bug 440774

  11 Nov 2012; <ago@gentoo.org> viewvc-1.1.17.ebuild:
  Stable for amd64, wrt bug #440774

*viewvc-1.1.17 (11 Nov 2012)

  11 Nov 2012; Anthony G. Basile <blueness@gentoo.org> +viewvc-1.1.17.ebuild:
  Version bump, bug #426690

  07 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> -viewvc-1.1.11.ebuild,
  -viewvc-1.1.12-r1.ebuild:
  Prune old version.

  21 May 2012; Jeremy Olexa <darkside@gentoo.org> viewvc-1.1.13.ebuild:
  stabilize for amd64 and x86 based on production amd64 usage
  (sources.gentoo.org)

*viewvc-1.1.13 (21 Feb 2012)

  21 Feb 2012; Jeremy Olexa <darkside@gentoo.org> +viewvc-1.1.13.ebuild:
  version bump from upstream with a few small bug fixes

*viewvc-1.1.12-r1 (29 Nov 2011)

  29 Nov 2011; Jeremy Olexa <darkside@gentoo.org> -viewvc-1.1.12.ebuild,
  +viewvc-1.1.12-r1.ebuild:
  Fix pygments and mime-type issue, bug 382959 by Alon Bar-Lev

*viewvc-1.1.12 (28 Nov 2011)

  28 Nov 2011; Jeremy Olexa <darkside@gentoo.org> +viewvc-1.1.12.ebuild:
  version bump, upstream bug fixes only

  01 Jul 2011; Markos Chandras <hwoarang@gentoo.org> -viewvc-1.1.8.ebuild,
  -viewvc-1.1.9.ebuild, -viewvc-1.1.10.ebuild:
  Remove old ebuilds. Requested by Arfrever

  24 Jun 2011; Raúl Porcel <armin76@gentoo.org> viewvc-1.1.8.ebuild,
  viewvc-1.1.9.ebuild, viewvc-1.1.10.ebuild, viewvc-1.1.11.ebuild:
  Drop sparc keywords
