@@ -4,17 +4,17 @@ Hash: SHA256
 DIST viewvc-1.1.17.tar.gz 611890 SHA256 3fec2c56bdea6529870e544e3e87fe4e0e1d4eafa42a468723ef2a35eaa607a6 SHA512 f8fdc7aea638d54a9bb7b336404b20df5d83cdce866b446ec418a2557be6470584bbf4a90031a5d5521328b1f7bd17e087060edd62c849c0a886a89081b35df9 WHIRLPOOL 91df84ca4be369107f3790c0f091a1fdd96efd452a46bc4ba1bc97265db18b913af674fa507902309a8e3031be26d04ec59d4363afefc582cfa6b11936a92666
 DIST viewvc-1.1.20.tar.gz 616561 SHA256 ecd9b77ddcdc33594edce34751b0feae64338580c177804e2a8395874cb31ff2 SHA512 1c0129be983e6832f12cf4850ee6fe03c6a4f694d9e7643f0efe65bd3e8c7d820fdaf3bb16fd3bb3628ea133b58b1e03196f2eb439cfb6ab4727d6178516d8d1 WHIRLPOOL 5746826abcdc061b7c7fc2de49bb3034c54b8fd889038334a2b55ae5523796710b7e1f83bdddfe1127f3d795d12275939dd43c38ceb29110cf6d3a4ab1a11cd4
 EBUILD viewvc-1.1.17.ebuild 2685 SHA256 dbe2391da74201783811f1f2bca92bb8abc6397c86531562a6df6cdcca2409ef SHA512 abb01cb66e413d47786b836f6fc74355fe788a4ae19b152bceecf15cac2eebcfb5c596c469042eff01028a75e467149ce4a2fa431e3e393c453d8bf6c787c697 WHIRLPOOL c571035d1a71b626bc7bd391e658cdfbe771363b6b215bdcd9022456889eae612c249d68a295b594eeacede67ff0d0ad058076cfb4e21f25230f57b62ce612c3
-EBUILD viewvc-1.1.20.ebuild 2554 SHA256 ebf6da1786d77e32c703edc3cfdf2a51e38140d992b6c6f8be923b55fc8549ae SHA512 b950b080562af222a442d84a72557c8dae8cf66a57526be4ae955432d82d57d4db736c10b1bc99acc1d600c5a1e43b490e36c01a727355e61106c2eb72229e23 WHIRLPOOL 54f0ef7a38127ec06e42a97895a9a84feed444fb3d8d0b81b5b931e4be784eac516cc3882ba74e59be29ab10fe6856678cde8f98762bc2fa2297929a1b22a6f6
-MISC ChangeLog 11610 SHA256 548762389b8af737ed423510bedd93259e4ee5c3015080b6ff85824a71d367b5 SHA512 d21f504aab5e36b8916125c909412aa92a7c732a05c45ac7f75878a150448e4c1a2dd459d90b07078e1a2d2783256ad098c6bb7159a183199282e2e12891a3f9 WHIRLPOOL d31cd75b29e57cb4bd0faff4b25bd9ef1e15bd2b9769f5feeb274e8a96b40349039a574ddf28e6004d05fefcd4158c602b6b7614c0424e7637ad7ec2affb30cb
+EBUILD viewvc-1.1.20.ebuild 2783 SHA256 0b1537ebbdd02b7c87d143a99ec3ad279089d5a6f0fabfd2710858c1506893e9 SHA512 5f0d60c555098332acca75aa715cf90cbae33c40e3f515297c64452b87b16e164f5c60baa42dbb5e3146ba1f2a3980a4d1e9ce53cdc7d62e73b8f286a94f7e6e WHIRLPOOL 2e2190f82e75a222972c2f1b3bc8505e0ca3bb83f62ab177800763243a38c0117ac221540ffc9c7695be0cc630ea63c76a91867c2cb0e6f0be26143cf611c850
+MISC ChangeLog 11740 SHA256 a9a6607a5a94d94a3d334f02c4764d1f31e9b1b5e35bdfba0677afb0a76c451d SHA512 b5ff41fabbcc78321f06c9195a10fadff04cfaef49bcef75d01c3ed9ee9c1f7ab4b1c3bee1d3079daea828b55ae56fe2f29d4f157754e2ad3b3a3540877b74f7 WHIRLPOOL 81d232bff70feba564fb5c258a447d1e066ec2fafc5e846dbd15796fa7fef63a95aa976da104f906059421a93833271aeb23f597e58d4ae285e68fca330944ac
 MISC metadata.xml 470 SHA256 3eae9a7016c60861699f996a9f4e1ae2e68bae5d3b79594a10034a22c8b7b2d4 SHA512 745a6b1480616cb53d5ea9b6535e058e459853828376fdfdcaf16dbeab4e7ecee9ba4608f317fe628588a7be9567e0bbcc5b457d4b306a3180c9f18db0b6f04d WHIRLPOOL dc6c6fb6671d884582d1d56ab948c5970566e57f86e8d9c91bfeb25d4ec94597289abf750d54bbdf9c2b32ef33f1e856783ccdc34bb3a889c640af6ed8c117fb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRoQPfAAoJEMOx0zmdw4Z1S/AIAJPM/DjkRYcqjcnuwswz+q46
-TXpqx90DbJKxppdx7tlHxr8HAZ9XkUrn1EKVL04SLDG4uL0kwbm5ZrsDniShY58j
-IMr4eTkWKwRaF1tbXWQuuAV8QjCql5X8MwPCECZh6x6VebySI1QNAkiMSa/Nvv9+
-uWo9JKolsKqRQRA9kMEtaIp+TTKFvG7Wsl5XMcCsb6/2b8sxCzCUBLvrpr80X0eC
-pX9cUkDo5b7AHMwko1uIzQrXe+rTlyDOsXxCTphYhKAmS7Sv97H/398mkCZ4wSOD
-Z64vdBGxKYoEGxfl0gjQaiErwn+qHZZKe+TDSIA4PAhjFEbbTeQ/BIoDBqTCbMU=
-=Y2Wg
+iQEcBAEBCAAGBQJRoRKJAAoJEMOx0zmdw4Z19LYH/2h1RhDcZb0zMB7aSuY8oxCw
+h8+d2TVoosPpOv8X3gXFu0Ku7jQhhm9Zwxj5D9kvYHf4XPw9VTwCjxKYjecBCPPX
+O1bmkm42w6Am1nIZQ1Eo1gAIAd9xl6kn+jtJqhgg4lMgprAIkMe+jEn0273iG15I
+F3VbV0bQIVFFcVhbzUYuf+dkHP4z13hc+juXmaDkZgNxZe7jLkrIzSasswLZuqpc
+U4N3gcheQfzL7ok5ki6AxqTNfzM1Jvdxai/AgP/huuq/Ux5UVsa7gmed/McC2PFZ
+6VI13kcrb7dLG5PRm8xBukaN/yWTbXrWRhOHP1exKHtoNKSEx0pJOjVIiPUpnlc=
+=eq4p
 -----END PGP SIGNATURE-----
