@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/viewvc/viewvc-1.1.20.ebuild,v 1.1 2013/05/25 18:32:58 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/viewvc/viewvc-1.1.20.ebuild,v 1.2 2013/05/25 19:35:32 idl0r Exp $
 
 EAPI="5"
 PYTHON_DEPEND="2"
@@ -89,6 +89,19 @@ src_install() {
 	doexe bin/cgi/viewvc.cgi
 	if use mysql; then
 		doexe bin/cgi/query.cgi
+	fi
+
+	exeinto "${MY_CGIBINDIR}"
+	if use mod_wsgi; then
+		doexe bin/wsgi/viewvc.wsgi
+		if use mysql; then
+			doexe bin/wsgi/query.wsgi
+		fi
+	else
+		doexe bin/wsgi/viewvc.fcgi
+		if use mysql; then
+			doexe bin/wsgi/query.fcgi
+		fi
 	fi
 
 	webapp_configfile "${MY_HOSTROOTDIR}/conf/"{viewvc,cvsgraph}.conf
