@@ -1,6 +1,9 @@
 # ChangeLog for www-apps/viewvc
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-apps/viewvc/ChangeLog,v 1.90 2013/05/25 18:32:58 idl0r Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-apps/viewvc/ChangeLog,v 1.91 2013/05/25 19:35:32 idl0r Exp $
+
+  25 May 2013; Christian Ruppert <idl0r@gentoo.org> viewvc-1.1.20.ebuild:
+  Install .fcgi/.wsgi files as suggested in bug 326901
 
 *viewvc-1.1.20 (25 May 2013)
 
